# gemma-video-kit

./: .gitignore  README.md  pyproject.toml
src/: inference.py  video_utils.py
